--- a/markup/_layouts/_content/live_score_content_soccer.jade
+++ b/markup/_layouts/_content/live_score_content_soccer.jade
@@ -33,7 +33,7 @@ mixin team-field-table(times)
 	each i in new Array(times)
 		tr
 			td Player name
-			td.pos FLEX
+			td.pos GK
 			td 30
 			td 12
 
@@ -66,63 +66,77 @@ mixin list-of-teams(times)
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
 								td 123
 								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
-								td.orange QB
+								td.orange A
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td.orange A
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td.orange A
 								td 123
 								td 15
 				div.nl-info-table-button
@@ -143,7 +157,7 @@ mixin list-of-teams(times)
 										p 360
 
 
-section.nl-section.nl-players.nl-live-score
+section.nl-section.nl-players.nl-live-score.soccer
 	div.container-fluid
 		div.row
 			div.col-12.page-heading
@@ -282,74 +296,75 @@ section.nl-section.nl-players.nl-live-score
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
-
-				div.nl-team-field.football
-					div.striker-line
-					div.midfielder-line
-					div.defender-line
-					div.player-main-block.football
-						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-							img(src="assets/img/football/FLEX.png" alt="FLEX")
+				
+				div.nl-team-field
+					div.player-main-block.soccer
+						div.nl-player-block.nl-GK-position(data-position="GK")
+							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
 							div.nl-player-block--data
-								
-								p.played gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-K-position(data-position="K")
-							img(src="assets/img/football/K.png" alt="K")
-							div.nl-player-block--data
-								
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-LRB-position(data-position="LRB")
-							img(src="assets/img/football/LRB.png" alt="LRB")
+						div.nl-player-block.nl-DL-position(data-position="DL")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
-								
 								p.playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-RRB-position(data-position="RRB")
-							img(src="assets/img/football/RRB.png" alt="RRB")
+						div.nl-player-block.nl-DR-position(data-position="DR")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
-								
-								p.played gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-QB-position(data-position="QB")
-							img(src="assets/img/football/QB.png" alt="QB")
-							div.nl-player-block--data
-								
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-LWR-position(data-position="LWR")
-							img(src="assets/img/football/LWR.png" alt="LWR")
+						div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
-								
+								p gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-DM-position(data-position="DM")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
+							div.nl-player-block--data
 								p.not-playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-RWR-position(data-position="RWR")
-							img(src="assets/img/football/RWR.png" alt="RWR")
+						div.nl-player-block.nl-MM-position(data-position="MM")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
-								
-								p.playing gronkowski
-								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-TE-position(data-position="TE")
-							img(src="assets/img/football/TE.png" alt="TE")
-							div.nl-player-block--data
-								
 								p gronkowski
 								p.data FP <span class="orange">12.67</span> 
 								p.data Score <span class="orange">15</span>
-						div.nl-player-block.nl-DEF-position(data-position="DEF")
-							img(src="assets/img/helmet-3" alt="logo")
+						div.nl-player-block.nl-MR-position(data-position="MR")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
-								p.not-playing PATRIOTS
+								p.playing gronkowski
 								p.data FP <span class="orange">12.67</span> 
-								p.data Score <span class="orange">15</span>		
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-ML-position(data-position="ML")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.played gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-AL-position(data-position="AL")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.not-playing gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
+						div.nl-player-block.nl-AR-position(data-position="AR")
+							img(src="assets/img/img-players.png" alt="goalkeeper")
+							div.nl-player-block--data
+								p.played gronkowski
+								p.data FP <span class="orange">12.67</span> 
+								p.data Score <span class="orange">15</span>
 
 				div.nl-team-list.nl-my-teams.hide
 					.nl-card-wrapper
@@ -357,10 +372,9 @@ section.nl-section.nl-players.nl-live-score
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
-									<img src="assets/img/helmet.png" alt="helmet">
-
+									<img src="assets/img/img-players.png" alt="shirt">
 						.row
-							.col-12.no-padding
+							.col-12
 								table.table.table-striped.nl-team-list-table
 									thead
 										tr
@@ -368,10 +382,98 @@ section.nl-section.nl-players.nl-live-score
 											th NAME
 											th POS
 											th FP
-											th Score
+											th SALARY
 											th
+
 									tbody
-										+team-field-table(9)
+										tr
+
+											td 
+												p Player name
+											td.pos G
+											td 30
+											td $0
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos D
+											td 30
+											td $0
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos D
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos D
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos D
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos M
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos M
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos M
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos S
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos S
+											td 30
+											td 12
+											td
+										tr
+
+											td 
+												p Player name
+											td.pos S
+											td 30
+											td 12
+											td
 
 			div.col-10.offset-1.col-sm-10.offset-sm-1.col-xl-4.offset-xl-0.chatbox
 				h5.d-inline-block.component-header Live chat
